nambahin auth dan konfigurasi untuk komunikasi raspi
